# cosmos-isolation-utils

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: __call__build.yaml  __call__checks.yaml  __call__publish.yaml  auto-merge.yaml  ci.yml  release.yaml
cosmos_isolation_utils/: __init__.py  __main__.py  hello_world.py
cosmos_isolation_utils/core/: __init__.py  base_executor.py  config.py  connection.py  cosmos_client.py  delete.py  dump.py  logging_utils.py  status.py  upload.py
tests/: test-requirements.txt  test_cli.py  test_hello_world.py
